[gd_scene load_steps=31 format=3 uid="uid://ii8m07pcbyny"]

[ext_resource type="Script" uid="uid://dwbbq0eniqwv8" path="res://scripts/inventory.gd" id="1_brsb2"]
[ext_resource type="Texture2D" uid="uid://p3aje3qowob6" path="res://assets/icons/inventory/inv_blue_background.png" id="1_yyk2a"]
[ext_resource type="Texture2D" uid="uid://bw8inowvere51" path="res://assets/icons/inventory/inv_pattern_background.png" id="2_uae8j"]
[ext_resource type="Texture2D" uid="uid://bxu0rsxqxe6b" path="res://assets/icons/inventory/inv_panel.png" id="3_s887n"]
[ext_resource type="FontFile" uid="uid://blhlh4a2ahqfu" path="res://assets/fonts/Montserrat-Black.ttf" id="4_g71ie"]
[ext_resource type="Texture2D" uid="uid://gj2lglmn4a20" path="res://assets/icons/inventory/inv_2nd_pattern_background.png" id="4_nq6oc"]
[ext_resource type="Texture2D" uid="uid://ci4q8lgrqkrwx" path="res://assets/icons/inventory/Money_Pill.png" id="5_sr8g6"]
[ext_resource type="Texture2D" uid="uid://5dmu422yco26" path="res://assets/icons/inventory/Left_Arrow.png" id="6_k86sa"]
[ext_resource type="StyleBox" uid="uid://goimmbje17xr" path="res://assets/styles/sb_cat_selected.tres" id="7_40feg"]
[ext_resource type="StyleBox" uid="uid://blds1su0s7fi7" path="res://assets/styles/sb_cat_unselected.tres" id="8_tla8l"]
[ext_resource type="Texture2D" uid="uid://blg6im704w8hq" path="res://assets/icons/inventory/comb.png" id="9_w24ly"]
[ext_resource type="Texture2D" uid="uid://cp4oopx0fcq45" path="res://assets/icons/inventory/Bone_Icon.png" id="10_ohgsq"]
[ext_resource type="Texture2D" uid="uid://j4l1niaxfnsx" path="res://assets/icons/inventory/Shirt_Icon.png" id="11_j8d85"]
[ext_resource type="Texture2D" uid="uid://c07x1yhwmf1ro" path="res://assets/icons/inventory/Ball_Icon.png" id="12_5mlvw"]
[ext_resource type="Texture2D" uid="uid://bt5w86s0a8i0f" path="res://assets/icons/inventory/Right_Arrow.png" id="13_jc13p"]
[ext_resource type="StyleBox" uid="uid://bfaupntb2rbap" path="res://assets/styles/sb_slot_selected.tres" id="14_tla8l"]
[ext_resource type="StyleBox" uid="uid://cmnsgbv4keh1f" path="res://assets/styles/sb_slot_normal.tres" id="15_w24ly"]
[ext_resource type="Texture2D" uid="uid://wqdlg88tkjnd" path="res://assets/icons/inventory/badge_normal.png" id="16_ohgsq"]
[ext_resource type="Script" uid="uid://dio7l3a2h7enp" path="res://scripts/itemslot.gd" id="16_w24ly"]
[ext_resource type="Texture2D" uid="uid://bp1h6w5amn50c" path="res://assets/icons/inventory/ribbon_normal.png" id="17_j8d85"]
[ext_resource type="Texture2D" uid="uid://cl2u71w7kykuw" path="res://assets/icons/inventory/BackButton.png" id="20_ohgsq"]
[ext_resource type="Texture2D" uid="uid://dfjnfb4rp2bj8" path="res://assets/icons/inventory/Item Description Box.png" id="21_5mlvw"]
[ext_resource type="Texture2D" uid="uid://dgvurgx5ld0rl" path="res://assets/icons/inventory/use button.png" id="22_jc13p"]

[sub_resource type="ButtonGroup" id="ButtonGroup_iqxo6"]

[sub_resource type="ButtonGroup" id="ButtonGroup_y2qpb"]

[sub_resource type="ButtonGroup" id="ButtonGroup_5kq8a"]

[sub_resource type="ButtonGroup" id="ButtonGroup_1bg26"]

[sub_resource type="LabelSettings" id="LabelSettings_5mlvw"]
font = ExtResource("4_g71ie")
font_size = 32
outline_size = 20
outline_color = Color(0.47451, 0.113725, 0.113725, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iqxo6"]
texture = ExtResource("21_5mlvw")

[sub_resource type="LabelSettings" id="LabelSettings_p7iul"]
font = ExtResource("4_g71ie")
font_size = 64
font_color = Color(0.219608, 0.164706, 0.588235, 1)
outline_size = 25

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 239.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_brsb2")

[node name="Background_blue" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_yyk2a")

[node name="Background_pattern" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_uae8j")

[node name="Background_pattern2" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1440.0
offset_bottom = 1024.0
texture = ExtResource("4_nq6oc")

[node name="MainPanel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.266
anchor_top = 0.263
anchor_right = -0.266
anchor_bottom = 0.263
offset_left = 532.374
offset_top = -126.312
offset_right = 1777.37
offset_bottom = 683.688
texture = ExtResource("3_s887n")

[node name="CategoryBar" type="HBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.353
anchor_top = 0.152
anchor_right = 0.353
anchor_bottom = 0.152
offset_left = -134.485
offset_top = -152.12
offset_right = 500.515
offset_bottom = -72.12

[node name="BtnPrev" type="TextureButton" parent="MainPanel/CategoryBar"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("6_k86sa")

[node name="BtnCare" type="Button" parent="MainPanel/CategoryBar"]
layout_mode = 2
focus_mode = 0
theme_override_styles/hover_pressed = ExtResource("7_40feg")
theme_override_styles/hover = ExtResource("8_tla8l")
theme_override_styles/pressed = ExtResource("7_40feg")
theme_override_styles/normal = ExtResource("8_tla8l")
toggle_mode = true
button_group = SubResource("ButtonGroup_iqxo6")
icon = ExtResource("9_w24ly")

[node name="BtnFood" type="Button" parent="MainPanel/CategoryBar"]
layout_mode = 2
focus_mode = 0
theme_override_styles/hover_pressed = ExtResource("7_40feg")
theme_override_styles/hover = ExtResource("8_tla8l")
theme_override_styles/pressed = ExtResource("7_40feg")
theme_override_styles/normal = ExtResource("8_tla8l")
toggle_mode = true
button_group = SubResource("ButtonGroup_y2qpb")
icon = ExtResource("10_ohgsq")

[node name="BtnClothes" type="Button" parent="MainPanel/CategoryBar"]
layout_mode = 2
focus_mode = 0
theme_override_styles/hover_pressed = ExtResource("7_40feg")
theme_override_styles/hover = ExtResource("8_tla8l")
theme_override_styles/pressed = ExtResource("7_40feg")
theme_override_styles/normal = ExtResource("8_tla8l")
toggle_mode = true
button_group = SubResource("ButtonGroup_5kq8a")
icon = ExtResource("11_j8d85")

[node name="BtnToys" type="Button" parent="MainPanel/CategoryBar"]
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = ExtResource("8_tla8l")
toggle_mode = true
button_group = SubResource("ButtonGroup_1bg26")
icon = ExtResource("12_5mlvw")

[node name="BtnNext" type="TextureButton" parent="MainPanel/CategoryBar"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("13_jc13p")

[node name="ScrollItems" type="ScrollContainer" parent="MainPanel"]
layout_mode = 0
offset_left = 80.0
offset_top = 116.0
offset_right = 1140.0
offset_bottom = 623.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Padding" type="MarginContainer" parent="MainPanel/ScrollItems"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 16

[node name="Grid" type="GridContainer" parent="MainPanel/ScrollItems/Padding"]
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 30
columns = 4

[node name="ItemSlot1" type="Button" parent="MainPanel/ScrollItems/Padding/Grid"]
custom_minimum_size = Vector2(220, 220)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover_pressed = ExtResource("14_tla8l")
theme_override_styles/hover = ExtResource("15_w24ly")
theme_override_styles/pressed = ExtResource("14_tla8l")
theme_override_styles/normal = ExtResource("15_w24ly")
toggle_mode = true
script = ExtResource("16_w24ly")

[node name="Icon" type="TextureRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot1"]
layout_mode = 0
offset_left = 42.0
offset_top = 45.0
offset_right = 195.0
offset_bottom = 159.0
expand_mode = 1
stretch_mode = 5

[node name="Badge" type="TextureRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot1"]
layout_mode = 0
offset_right = 248.0
offset_bottom = 40.0

[node name="BadgeBG" type="NinePatchRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot1/Badge"]
custom_minimum_size = Vector2(100, 52)
layout_mode = 0
offset_left = 108.0
offset_top = -16.0
offset_right = 247.0
offset_bottom = 36.0
texture = ExtResource("16_ohgsq")

[node name="Count" type="Label" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot1/Badge"]
layout_mode = 0
offset_left = 141.334
offset_top = -14.0
offset_right = 214.334
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("4_g71ie")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="BottomBar" type="MarginContainer" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot1"]
layout_mode = 0
offset_left = 1.0
offset_top = 163.0
offset_right = 219.0
offset_bottom = 225.0

[node name="Ribbon" type="NinePatchRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot1/BottomBar"]
layout_mode = 2
texture = ExtResource("17_j8d85")

[node name="Item Name" type="Label" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot1/BottomBar"]
layout_mode = 2
text = "Comb"
label_settings = SubResource("LabelSettings_5mlvw")
horizontal_alignment = 1

[node name="ItemSlot02" type="Button" parent="MainPanel/ScrollItems/Padding/Grid"]
custom_minimum_size = Vector2(220, 220)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover_pressed = ExtResource("14_tla8l")
theme_override_styles/hover = ExtResource("15_w24ly")
theme_override_styles/pressed = ExtResource("14_tla8l")
theme_override_styles/normal = ExtResource("15_w24ly")
toggle_mode = true
script = ExtResource("16_w24ly")

[node name="Icon" type="TextureRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot02"]
layout_mode = 0
offset_left = 61.0
offset_top = 28.0
offset_right = 194.0
offset_bottom = 159.0
expand_mode = 1
stretch_mode = 4

[node name="Badge" type="TextureRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot02"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BadgeBG" type="NinePatchRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot02/Badge"]
custom_minimum_size = Vector2(100, 52)
layout_mode = 0
offset_left = 108.0
offset_top = -16.0
offset_right = 247.0
offset_bottom = 36.0
texture = ExtResource("16_ohgsq")

[node name="Count" type="Label" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot02/Badge"]
layout_mode = 0
offset_left = 145.0
offset_top = -16.0
offset_right = 221.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("4_g71ie")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="BottomBar" type="MarginContainer" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot02"]
layout_mode = 0
offset_left = 1.0
offset_top = 163.0
offset_right = 219.0
offset_bottom = 225.0

[node name="Ribbon" type="NinePatchRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot02/BottomBar"]
layout_mode = 2
texture = ExtResource("17_j8d85")

[node name="Item Name" type="Label" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot02/BottomBar"]
layout_mode = 2
text = "Shampoo"
label_settings = SubResource("LabelSettings_5mlvw")
horizontal_alignment = 1

[node name="ItemSlot03" type="Button" parent="MainPanel/ScrollItems/Padding/Grid"]
custom_minimum_size = Vector2(220, 220)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover_pressed = ExtResource("14_tla8l")
theme_override_styles/hover = ExtResource("15_w24ly")
theme_override_styles/pressed = ExtResource("14_tla8l")
theme_override_styles/normal = ExtResource("15_w24ly")
toggle_mode = true
script = ExtResource("16_w24ly")
path_name = NodePath("BottomBar/ItemName")

[node name="Icon" type="TextureRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot03"]
layout_mode = 0
offset_left = 26.0
offset_top = 25.0
offset_right = 199.0
offset_bottom = 172.0
expand_mode = 1
stretch_mode = 5

[node name="Badge" type="TextureRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot03"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BadgeBG" type="NinePatchRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot03/Badge"]
custom_minimum_size = Vector2(100, 52)
layout_mode = 0
offset_left = 108.0
offset_top = -16.0
offset_right = 247.0
offset_bottom = 36.0
texture = ExtResource("16_ohgsq")

[node name="Count" type="Label" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot03/Badge"]
layout_mode = 0
offset_left = 141.0
offset_top = -16.0
offset_right = 218.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("4_g71ie")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="BottomBar" type="MarginContainer" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot03"]
layout_mode = 0
offset_left = 1.0
offset_top = 163.0
offset_right = 219.0
offset_bottom = 225.0

[node name="Ribbon" type="NinePatchRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot03/BottomBar"]
layout_mode = 2
texture = ExtResource("17_j8d85")

[node name="ItemName" type="Label" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot03/BottomBar"]
layout_mode = 2
text = "Bath Soap"
label_settings = SubResource("LabelSettings_5mlvw")
horizontal_alignment = 1

[node name="ItemSlot04" type="Button" parent="MainPanel/ScrollItems/Padding/Grid"]
custom_minimum_size = Vector2(220, 220)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover_pressed = ExtResource("14_tla8l")
theme_override_styles/hover = ExtResource("15_w24ly")
theme_override_styles/pressed = ExtResource("14_tla8l")
theme_override_styles/normal = ExtResource("15_w24ly")
toggle_mode = true
script = ExtResource("16_w24ly")
path_name = NodePath("BottomBar/ItemName")

[node name="Icon" type="TextureRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot04"]
layout_mode = 0
offset_left = 25.0
offset_top = 28.0
offset_right = 201.0
offset_bottom = 160.0
expand_mode = 1
stretch_mode = 5

[node name="Badge" type="TextureRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot04"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BadgeBG" type="NinePatchRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot04/Badge"]
custom_minimum_size = Vector2(100, 52)
layout_mode = 0
offset_left = 108.0
offset_top = -16.0
offset_right = 247.0
offset_bottom = 36.0
texture = ExtResource("16_ohgsq")

[node name="Count" type="Label" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot04/Badge"]
layout_mode = 0
offset_left = 149.0
offset_top = -14.0
offset_right = 219.0
offset_bottom = 34.0
theme_override_fonts/font = ExtResource("4_g71ie")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="BottomBar" type="MarginContainer" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot04"]
layout_mode = 0
offset_left = 1.0
offset_top = 163.0
offset_right = 219.0
offset_bottom = 225.0

[node name="Ribbon" type="NinePatchRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot04/BottomBar"]
layout_mode = 2
texture = ExtResource("17_j8d85")

[node name="ItemName" type="Label" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot04/BottomBar"]
layout_mode = 2
text = "Towel"
label_settings = SubResource("LabelSettings_5mlvw")
horizontal_alignment = 1

[node name="ItemSlot05" type="Button" parent="MainPanel/ScrollItems/Padding/Grid"]
custom_minimum_size = Vector2(220, 220)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover_pressed = ExtResource("14_tla8l")
theme_override_styles/hover = ExtResource("15_w24ly")
theme_override_styles/pressed = ExtResource("14_tla8l")
theme_override_styles/normal = ExtResource("15_w24ly")
toggle_mode = true
script = ExtResource("16_w24ly")
path_name = NodePath("BottomBar/ItemName")

[node name="Icon" type="TextureRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot05"]
layout_mode = 0
offset_left = 44.0
offset_top = 39.0
offset_right = 184.0
offset_bottom = 161.0
expand_mode = 1

[node name="Badge" type="TextureRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot05"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BadgeBG" type="NinePatchRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot05/Badge"]
custom_minimum_size = Vector2(100, 52)
layout_mode = 0
offset_left = 108.0
offset_top = -16.0
offset_right = 247.0
offset_bottom = 36.0
texture = ExtResource("16_ohgsq")

[node name="Count" type="Label" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot05/Badge"]
layout_mode = 0
offset_left = 143.0
offset_top = -16.0
offset_right = 216.0
offset_bottom = 34.0
theme_override_fonts/font = ExtResource("4_g71ie")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="BottomBar" type="MarginContainer" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot05"]
layout_mode = 0
offset_left = 1.0
offset_top = 163.0
offset_right = 219.0
offset_bottom = 225.0

[node name="Ribbon" type="NinePatchRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot05/BottomBar"]
layout_mode = 2
texture = ExtResource("17_j8d85")

[node name="ItemName" type="Label" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot05/BottomBar"]
layout_mode = 2
text = "Item Name"
label_settings = SubResource("LabelSettings_5mlvw")
horizontal_alignment = 1

[node name="ItemSlot06" type="Button" parent="MainPanel/ScrollItems/Padding/Grid"]
custom_minimum_size = Vector2(220, 220)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover_pressed = ExtResource("14_tla8l")
theme_override_styles/hover = ExtResource("15_w24ly")
theme_override_styles/pressed = ExtResource("14_tla8l")
theme_override_styles/normal = ExtResource("15_w24ly")
toggle_mode = true
script = ExtResource("16_w24ly")
path_name = NodePath("BottomBar/ItemName")

[node name="Icon" type="TextureRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot06"]
layout_mode = 0
offset_left = 40.0
offset_top = 46.0
offset_right = 190.0
offset_bottom = 154.0
expand_mode = 1

[node name="Badge" type="TextureRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot06"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BadgeBG" type="NinePatchRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot06/Badge"]
custom_minimum_size = Vector2(100, 52)
layout_mode = 0
offset_left = 108.0
offset_top = -16.0
offset_right = 247.0
offset_bottom = 36.0
texture = ExtResource("16_ohgsq")

[node name="Count" type="Label" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot06/Badge"]
layout_mode = 0
offset_left = 144.0
offset_top = -14.0
offset_right = 216.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("4_g71ie")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="BottomBar" type="MarginContainer" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot06"]
layout_mode = 0
offset_left = 1.0
offset_top = 163.0
offset_right = 219.0
offset_bottom = 225.0

[node name="Ribbon" type="NinePatchRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot06/BottomBar"]
layout_mode = 2
texture = ExtResource("17_j8d85")

[node name="ItemName" type="Label" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot06/BottomBar"]
layout_mode = 2
text = "Item Name"
label_settings = SubResource("LabelSettings_5mlvw")
horizontal_alignment = 1

[node name="ItemSlot07" type="Button" parent="MainPanel/ScrollItems/Padding/Grid"]
custom_minimum_size = Vector2(220, 220)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover_pressed = ExtResource("14_tla8l")
theme_override_styles/hover = ExtResource("15_w24ly")
theme_override_styles/pressed = ExtResource("14_tla8l")
theme_override_styles/normal = ExtResource("15_w24ly")
toggle_mode = true
script = ExtResource("16_w24ly")
path_name = NodePath("BottomBar/ItemName")

[node name="Icon" type="TextureRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot07"]
layout_mode = 0
offset_left = 15.0
offset_top = 35.0
offset_right = 187.0
offset_bottom = 168.0
expand_mode = 1

[node name="Badge" type="TextureRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot07"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BadgeBG" type="NinePatchRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot07/Badge"]
custom_minimum_size = Vector2(100, 52)
layout_mode = 0
offset_left = 108.0
offset_top = -16.0
offset_right = 247.0
offset_bottom = 36.0
texture = ExtResource("16_ohgsq")

[node name="Count" type="Label" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot07/Badge"]
layout_mode = 0
offset_left = 141.0
offset_top = -14.0
offset_right = 211.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("4_g71ie")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="BottomBar" type="MarginContainer" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot07"]
layout_mode = 0
offset_left = 1.0
offset_top = 163.0
offset_right = 219.0
offset_bottom = 225.0

[node name="Ribbon" type="NinePatchRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot07/BottomBar"]
layout_mode = 2
texture = ExtResource("17_j8d85")

[node name="ItemName" type="Label" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot07/BottomBar"]
layout_mode = 2
text = "Item Name"
label_settings = SubResource("LabelSettings_5mlvw")
horizontal_alignment = 1

[node name="ItemSlot08" type="Button" parent="MainPanel/ScrollItems/Padding/Grid"]
custom_minimum_size = Vector2(220, 220)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover_pressed = ExtResource("14_tla8l")
theme_override_styles/hover = ExtResource("15_w24ly")
theme_override_styles/pressed = ExtResource("14_tla8l")
theme_override_styles/normal = ExtResource("15_w24ly")
toggle_mode = true
script = ExtResource("16_w24ly")
path_name = NodePath("BottomBar/ItemName")

[node name="Icon" type="TextureRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot08"]
layout_mode = 0
offset_left = 30.0
offset_top = 36.0
offset_right = 188.0
offset_bottom = 155.0
expand_mode = 1

[node name="Badge" type="TextureRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot08"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BadgeBG" type="NinePatchRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot08/Badge"]
custom_minimum_size = Vector2(100, 52)
layout_mode = 0
offset_left = 108.0
offset_top = -16.0
offset_right = 247.0
offset_bottom = 36.0
texture = ExtResource("16_ohgsq")

[node name="Count" type="Label" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot08/Badge"]
layout_mode = 0
offset_left = 142.0
offset_top = -14.0
offset_right = 212.0
offset_bottom = 34.0
theme_override_fonts/font = ExtResource("4_g71ie")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="BottomBar" type="MarginContainer" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot08"]
layout_mode = 0
offset_left = 1.0
offset_top = 163.0
offset_right = 219.0
offset_bottom = 225.0

[node name="Ribbon" type="NinePatchRect" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot08/BottomBar"]
layout_mode = 2
texture = ExtResource("17_j8d85")

[node name="ItemName" type="Label" parent="MainPanel/ScrollItems/Padding/Grid/ItemSlot08/BottomBar"]
layout_mode = 2
text = "Item Name"
label_settings = SubResource("LabelSettings_5mlvw")
horizontal_alignment = 1

[node name="BackButton" type="TextureButton" parent="MainPanel"]
layout_mode = 0
offset_left = -14.0
offset_top = -40.0
offset_right = 129.0
offset_bottom = 63.0
texture_normal = ExtResource("20_ohgsq")

[node name="ItemPanel" type="Panel" parent="MainPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.032
anchor_bottom = 0.025
offset_left = 165.0
offset_top = 616.0
offset_right = 1018.16
offset_bottom = 837.75
theme_override_styles/panel = SubResource("StyleBoxTexture_iqxo6")

[node name="Name" type="Label" parent="MainPanel/ItemPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.045
anchor_bottom = 0.095
offset_left = 46.0
offset_top = 29.0
offset_right = 224.815
offset_bottom = 59.01
theme_override_fonts/font = ExtResource("4_g71ie")
theme_override_font_sizes/font_size = 20

[node name="Owned" type="Label" parent="MainPanel/ItemPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.045
anchor_bottom = 0.048
offset_left = 675.0
offset_top = 27.0
offset_right = 803.815
offset_bottom = 65.384
theme_override_fonts/font = ExtResource("4_g71ie")
theme_override_font_sizes/font_size = 20

[node name="Desc" type="RichTextLabel" parent="MainPanel/ItemPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.045
anchor_bottom = 0.165
offset_left = 39.0
offset_top = 84.0
offset_right = 798.815
offset_bottom = 127.07
theme_override_colors/table_border = Color(0, 0.2, 0.4, 1)
theme_override_fonts/normal_font = ExtResource("4_g71ie")
theme_override_font_sizes/bold_italics_font_size = 30

[node name="UseButton" type="Button" parent="MainPanel/ItemPanel"]
layout_mode = 1
anchors_preset = -1
offset_left = 678.0
offset_top = 160.0
offset_right = 925.0
offset_bottom = 260.0
icon = ExtResource("22_jc13p")
flat = true

[node name="TopBar" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(220, 64)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0331384
anchor_top = 0.00683594
anchor_right = 0.842755
anchor_bottom = 0.118164
offset_right = 0.00012207
theme_override_constants/separation = 12
metadata/_edit_use_anchors_ = true

[node name="TitleLabel" type="Label" parent="TopBar"]
custom_minimum_size = Vector2(352, 69)
layout_mode = 2
text = "Inventory"
label_settings = SubResource("LabelSettings_p7iul")

[node name="MoneyPill" type="MarginContainer" parent="TopBar"]
custom_minimum_size = Vector2(281, 73)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="PillFill" type="NinePatchRect" parent="TopBar/MoneyPill"]
custom_minimum_size = Vector2(281, 73)
layout_mode = 2
texture = ExtResource("5_sr8g6")
